--- a/assignment1/0429.ipynb
+++ b/assignment1/0429.ipynb
@@ -73,6 +73,53 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#version 1\n",
+        "import random\n",
+        "times3 = 0\n",
+        "times5 = 0\n",
+        "times7 = 0\n",
+        "others = 0\n",
+        "for i in range(1,101):\n",
+        "  flag = False\n",
+        "  randNum = random.randint(1,100)\n",
+        "  print(randNum,end = ' ')\n",
+        "  if randNum % 3 == 0:\n",
+        "    times3 += 1\n",
+        "    flag = True\n",
+        "  if randNum % 5 == 0:\n",
+        "    times5 += 1\n",
+        "    flag = True\n",
+        "  if randNum % 7 == 0:\n",
+        "    times7 += 1\n",
+        "    flag = True\n",
+        "  if flag == False:\n",
+        "    others += 1\n",
+        "print('\\ntimes3 = %d, times5 = %d, times7 = %d'%(times3,times5,times7))\n",
+        "print('others = %d'%(others))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l7RzVDEm7FIx",
+        "outputId": "9ae50740-8121-407c-d2d8-a614d77b425e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30 65 5 67 46 13 39 93 66 82 25 71 61 2 30 86 24 1 28 75 57 5 76 18 31 86 70 23 74 88 92 30 11 10 17 88 93 11 44 3 3 27 78 94 21 84 75 90 41 85 78 62 76 47 58 62 22 84 21 3 19 76 73 93 24 33 7 44 61 75 74 9 49 71 87 96 92 70 71 4 59 59 84 84 2 91 63 7 25 79 24 47 58 77 49 100 50 91 75 81 \n",
+            "times3 = 36, times5 = 19, times7 = 17\n",
+            "others = 45\n"
+          ]
+        }
+      ]
     }
   ]
 }
