--- a/assignment1/0429_1.ipynb
+++ b/assignment1/0429_1.ipynb
@@ -119,8 +119,8 @@
       "source": [
         "import random\n",
         "count = 1\n",
-        "while count <= 10:\n",
-        "  for i in range(1,7):\n",
+        "while count <= 12:\n",
+        "  for i in range(1,6):\n",
         "    randNum = random.randint(1,49)\n",
         "    print('%3d'%(randNum),end = ' ')\n",
         "  print()\n",
@@ -132,24 +132,98 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B505Ji6jaO0k",
-        "outputId": "25b3e70e-f8ee-445f-9b41-b93704c7db96"
+        "outputId": "cb56ac83-093a-42c4-971c-97a3142d01e5"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            " 20   1  16   9  33  23 \n",
-            " 29  17  34  40  23  40 \n",
-            " 34  37  25   7  35  11 \n",
-            " 27   3  21  29  13  25 \n",
-            " 47   4  33  37  43  48 \n",
-            " 35  29  15  18  25   8 \n",
-            " 13  24  44  21  13  37 \n",
-            " 13  15  31  28  26  41 \n",
-            " 13  44   2  32  49  45 \n",
-            " 11  37   5   9  42  32 \n",
+            " 26  15   3  38   4 \n",
+            " 42   4  40  19  49 \n",
+            " 11  33   3  25  35 \n",
+            " 16   6  20   5  13 \n",
+            " 12  49   7  44  24 \n",
+            " 20  39  40  39  48 \n",
+            " 16  43  43  48  34 \n",
+            " 26   4  12  34  16 \n",
+            " 10  18  20  36  28 \n",
+            " 36   5  43  41   3 \n",
+            " 40  23  16  42  26 \n",
+            " 20  20  43  40   7 \n",
+            "Over\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "again = 'yes'\n",
+        "while again == 'yes':\n",
+        "  for i in range(1,7):\n",
+        "    randNum = random.randint(1,49)\n",
+        "    print('%3d'%(randNum),end = ' ')\n",
+        "  print()\n",
+        "  again = (input('continue:yes or quit:no---->'))\n",
+        "print('Over')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iIazy_EXdfQs",
+        "outputId": "b9b0e239-5283-4bd8-cf66-80d61fec3a9b"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  6  21  34  23   2   3 \n",
+            "continue:yes or quit:no---->yes\n",
+            " 36  10  13  29  16  13 \n",
+            "continue:yes or quit:no---->no\n",
+            "Over\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "again = 1\n",
+        "while again == 1:\n",
+        "  for i in range(1,7):\n",
+        "    randNum = random.randint(1,49)\n",
+        "    print('%3d'%(randNum),end = ' ')\n",
+        "  print()\n",
+        "  again = eval(input('continue:1 or quit:0---->'))\n",
+        "print('Over')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VXRFAv5Kk6gp",
+        "outputId": "7f21f374-51ab-4609-8555-c25909e6b99b"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  4  15  20   8  23  19 \n",
+            "continue:1 or quit:0---->1\n",
+            " 39   8  25  18  26  12 \n",
+            "continue:1 or quit:0---->1\n",
+            " 33   9  24  15   4  27 \n",
+            "continue:1 or quit:0---->0\n",
             "Over\n"
           ]
         }
