--- a/assignment1/0429_1.ipynb
+++ b/assignment1/0429_1.ipynb
@@ -228,6 +228,46 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "while True:\n",
+        "  for i in range(1,7):\n",
+        "    randNum = random.randint(1,49)\n",
+        "    print(randNum,end = ' ')\n",
+        "  print()\n",
+        "  again = eval(input('continue:1 or quit:0---->'))\n",
+        "  if again == 0:\n",
+        "    break\n",
+        "print('Over')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rpaoCGiioYxz",
+        "outputId": "2269c512-a4c5-4319-c1e5-d897f312a4e2"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "45 21 45 33 39 36 \n",
+            "continue:1 or quit:0---->1\n",
+            "39 20 8 18 38 2 \n",
+            "continue:1 or quit:0---->1\n",
+            "49 47 41 47 14 43 \n",
+            "continue:1 or quit:0---->1\n",
+            "29 4 49 2 26 26 \n",
+            "continue:1 or quit:0---->0\n",
+            "Over\n"
+          ]
+        }
+      ]
     }
   ]
 }
