--- a/assignment1/0506_1.ipynb
+++ b/assignment1/0506_1.ipynb
@@ -119,6 +119,39 @@
     {
       "cell_type": "code",
       "source": [
+        "def total():\n",
+        "  sum = 0\n",
+        "  for i in range(1,101):\n",
+        "    sum += i\n",
+        "  return sum\n",
+        "\n",
+        "def main():\n",
+        "  t = total()\n",
+        "  print('summation of 1 to 100:',t)\n",
+        "\n",
+        "main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UifgP4l3oy8o",
+        "outputId": "b61f7222-b375-4467-edb3-ee7ef8bf87ba"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "summation of 1 to 100: 5050\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def total(a,b):\n",
         "  sum = 0\n",
         "  for i in range(a,b+1):\n",
